--- a/gallery.html
+++ b/gallery.html
@@ -150,19 +150,33 @@
 <!-- قسم صور الكنب -->
 <h2>صور كنب مفرد وثلاثي</h2>
 <div class="gallery">
-  <img src="https://i.postimg.cc/abc1.jpg" alt="كرسي1">
-  <img src="https://i.postimg.cc/abc2.jpg" alt="كرسي2">
-  <img src="https://i.postimg.cc/abc3.jpg" alt="كرسي3">
-  <img src="https://i.postimg.cc/abc4.jpg" alt="كرسي4">
+ <img src="https://i.postimg.cc/GhZqwXNx/IMG-3055.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/zGr2HdjX/IMG-3037.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/0y0WYpWG/be683716-ad38-47dc-a0a0-dc8da79cbb92.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/BvhmyJGX/d02ebdeb-1571-4254-a4cf-38106b7d04af.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/d1L5cgqn/ffbb2ee4-bcf7-4d34-8aac-61c450160fda.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/BbFNXDPK/IMG-2899.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/PfvS3GV5/a26517a4-ff51-482d-86ad-b44b2bff05d6.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/sDpwzYrF/821f3cb9-f352-41e5-9337-4f99ed3fa11d.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/K8xQ81G1/ddc4ae75-fef8-4897-b7eb-a5b45bf24174.jpg" alt="صورة" /> 
 </div>
 
 <!-- قسم صور طاولات وكراسي -->
 <h2>صور طاولات وكراسي</h2>
 <div class="gallery">
-  <img src="https://i.postimg.cc/abc1.jpg" alt="كرسي1">
-  <img src="https://i.postimg.cc/abc2.jpg" alt="كرسي2">
-  <img src="https://i.postimg.cc/abc3.jpg" alt="كرسي3">
-  <img src="https://i.postimg.cc/abc4.jpg" alt="كرسي4">
+ <img src="https://i.postimg.cc/pdPrmt4V/c40bae99-ae66-4d61-848a-776846e53140.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/cCf6K4xH/IMG-3035.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/28FVr699/a89f7420-69cb-475c-a69c-3da37e1bbdb0.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/y81WdHw1/74fc88ae-41e0-476e-be69-30de4f6abfd0.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/pd7dqnyr/037dd894-19c1-4ed4-966a-c024bc028161.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/0jG2kWnK/fa5304c5-fee2-4598-a750-0ea4744beb7c.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/Ghrm7R3F/f220e5fd-8d29-48c9-872a-d261570c7071.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/VkZskbqg/de6b4ccb-4a17-45fd-953a-78c1295ceb39.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/k5knx3ht/6913c560-a82f-46f5-b353-a7818a70ee27.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/fTThSRTr/08f0a50f-9556-47d8-b44b-6a3ab8e95162.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/pX71VW98/e1a0b5a2-be23-4060-b6c5-75e0e1b5dd06.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/YCWDh5gP/3c402028-4303-4282-928a-802c8d63c5eb.jpg" alt="صورة" />
+  </div> 
 </div>
 
 <!-- قسم صور الجلسات -->
@@ -187,28 +201,45 @@
 <!-- قسم صور الخيام -->
 <h2>صور خيام</h2>
 <div class="gallery">
-  <img src="https://i.postimg.cc/abc1.jpg" alt="كرسي1">
-  <img src="https://i.postimg.cc/abc2.jpg" alt="كرسي2">
-  <img src="https://i.postimg.cc/abc3.jpg" alt="كرسي3">
-  <img src="https://i.postimg.cc/abc4.jpg" alt="كرسي4">
+<img src="https://i.postimg.cc/yxRkRRDr/IMG-3096.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/8CCcH9Fv/IMG-3095.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/g0BJBsRT/IMG-3094.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/wB3xJNPc/IMG-3093.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/PxwtVjdC/IMG-3092.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/Bb5JsBLs/IMG-3091.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/ydz5B4Fg/f475dd2b-59f4-4d79-9c94-7f6d3a6e85cf.jpg" alt="صورة" />
 </div>
 
-<!-- قسم صور الحواجز والممرات والليزرات وشاشات العرض والسجاد -->
+<!-- قسم صور الحواجز والممرات والليزرات والشاشات وشاشات العرض والسجاد -->
 <h2>صور حواجز وممرات وليزرات وشاشات وسجاد</h2>
 <div class="gallery">
-  <img src="https://i.postimg.cc/xyz1.jpg" alt="جلسة1">
-  <img src="https://i.postimg.cc/xyz2.jpg" alt="جلسة2">
-  <img src="https://i.postimg.cc/xyz3.jpg" alt="جلسة3">
-  <img src="https://i.postimg.cc/xyz4.jpg" alt="جلسة4">
+ <img src="https://i.postimg.cc/s2PmYBhx/IMG-3089.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/0N5nCkdC/IMG-3088.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/k55Nbjq1/IMG-3087.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/jdrzXqRJ/IMG-3086.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/yxTWnHTF/IMG-3085.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/nc0CDnrx/IMG-3084.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/g27jg43B/IMG-3083.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/mDfDsDXY/IMG-3082.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/1Xy38dZ4/IMG-3080.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/c49LJTk4/IMG-3078.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/6QRWYKWy/IMG-3077.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/rsyqVtSr/a11b82c2-599f-4fde-842e-368bff38beb2.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/zDpJd0rS/4db8dba2-e42a-4a76-b127-65e1f8a11e82.jpg" alt="صورة" /> 
 </div>
   
 <!-- قسم صور الكراسي -->
 <h2>صور كراسي</h2>
 <div class="gallery">
-  <img src="https://i.postimg.cc/xyz1.jpg" alt="جلسة1">
-  <img src="https://i.postimg.cc/xyz2.jpg" alt="جلسة2">
-  <img src="https://i.postimg.cc/xyz3.jpg" alt="جلسة3">
-  <img src="https://i.postimg.cc/xyz4.jpg" alt="جلسة4">
+  <img src="https://i.postimg.cc/GhZqwXNx/IMG-3055.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/zGr2HdjX/IMG-3037.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/0y0WYpWG/be683716-ad38-47dc-a0a0-dc8da79cbb92.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/BvhmyJGX/d02ebdeb-1571-4254-a4cf-38106b7d04af.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/d1L5cgqn/ffbb2ee4-bcf7-4d34-8aac-61c450160fda.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/BbFNXDPK/IMG-2899.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/PfvS3GV5/a26517a4-ff51-482d-86ad-b44b2bff05d6.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/sDpwzYrF/821f3cb9-f352-41e5-9337-4f99ed3fa11d.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/K8xQ81G1/ddc4ae75-fef8-4897-b7eb-a5b45bf24174.jpg" alt="صورة" />
 </div>
 
 <!-- زر رجوع نهاية الصفحة -->
