--- a/index.html
+++ b/index.html
@@ -178,6 +178,49 @@
 </head>
 <body>
 
+ <!-- JSON-LD لتعريف النشاط التجاري -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "تأجير طاولات وكراسي تأجير كنب تاجير لوازم الحفلات",
+    "image": "https://i.postimg.cc/QxMDh9df/favicon.png",
+    "url": "https://www.aladyadh.com",
+    "telephone": "+966559534118",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "شارع الملك فهد",
+      "addressLocality": "الدمام",
+      "addressRegion": "المنطقة الشرقية",
+      "postalCode": "32210",
+      "addressCountry": "SA"
+    },
+    "openingHoursSpecification": [
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Sunday",
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday"
+        ],
+        "opens": "00:00",
+        "closes": "23:59"
+      }
+    ],
+    "priceRange": "متوسط",
+    "description": "تأجير طاولات وكراسي تاجير كنب تاجير جلسات شعبية تاجير خيام تاجير سجاد تاجير مكيفات تاجير سماعات تاجير دفايات قهوجيين وصبابين وضيافة للرجال والنساء في الدمام والرياض وجدة.",
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 26.4207,
+      "longitude": 50.0888
+    }
+  }
+  </script>
+  
 <header>
   <div class="logo">حفلات ومناسبات</div>
   <nav>
