--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   gtag('config', 'AW-17518401958');
 </script>
 
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518401958"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17518401958'); </script>
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تأجير طاولات وكراسي تاجير كنب - لمسات للحفلات</title>
