--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518401958"></script> 
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>تأجير طاولات وكراسي تاجير كنب - لمسات للحفلات</title>
+
+    <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518401958"></script> 
   <script> 
     window.dataLayer = window.dataLayer || []; 
     function gtag(){dataLayer.push(arguments);} 
@@ -9,10 +13,16 @@
     
     gtag('config', 'AW-17518401958'); </script>
   </script>
+
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518401958"></script>
+  <script>
+    window.dataLayer = window.dataLayer || []; 
+    function gtag(){dataLayer.push(arguments);} 
+    gtag('js', new Date()); 
+    
+    gtag('config', 'AW-17518401958'); 
+  </script>
   
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>تأجير طاولات وكراسي تاجير كنب - لمسات للحفلات</title>
   <link rel="canonical" href="https://www.lamasat.store/" />
   <meta name="description" content="نوفر جميع مستلزمات الحفلات والمناسبات بأسعار منافسة في الدمام والرياض وجدة. تأجير كراسي، تاجير كنب، تاجير طاولات وكراسي، تاجير جلسات، طاولات، كنب، ديكورات، جلسات شعبية والمزيد.">
   <style>
