--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>تأجير طاولات وكراسي تاجير كنب - لمسات للحفلات</title>
+  <title>تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
 
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518401958"></script> 
   <script> 
@@ -24,7 +24,7 @@
   </script>
   
   <link rel="canonical" href="https://www.lamasat.store/" />
-  <meta name="description" content="نوفر جميع مستلزمات الحفلات والمناسبات بأسعار منافسة في الدمام والرياض وجدة. تأجير كراسي، تاجير كنب، تاجير طاولات وكراسي، تاجير جلسات، طاولات، كنب، ديكورات، جلسات شعبية والمزيد.">
+  <meta name="description" content="نوفر جميع مستلزمات الحفلات والمناسبات بأسعار منافسة في الدمام والرياض وجدة. تأجير كراسي، تاجير كنب، تاجير كوش، تاجير طاولات استقبال، تاجير طاولات كوكتيل، تاجير شاشات، تاجير ليزرات، تاجير ممرات، تاجير كنب، تاجير طاولات وكراسي، تاجير جلسات، طاولات، كنب، ديكورات، كوش، جلسات شعبية، طاولات استقبال، طاولات كوكتيل، جلسات شعبية والمزيد.">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
     * {
@@ -186,49 +186,6 @@
 </script>
 </head>
 <body>
-
- <!-- JSON-LD لتعريف النشاط التجاري -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "تأجير طاولات وكراسي تأجير كنب تاجير لوازم الحفلات",
-    "image": "https://i.postimg.cc/QxMDh9df/favicon.png",
-    "url": "https://www.aladyadh.com",
-    "telephone": "+966559534118",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "شارع الملك فهد",
-      "addressLocality": "الدمام",
-      "addressRegion": "المنطقة الشرقية",
-      "postalCode": "32210",
-      "addressCountry": "SA"
-    },
-    "openingHoursSpecification": [
-      {
-        "@type": "OpeningHoursSpecification",
-        "dayOfWeek": [
-          "Sunday",
-          "Monday",
-          "Tuesday",
-          "Wednesday",
-          "Thursday",
-          "Friday",
-          "Saturday"
-        ],
-        "opens": "00:00",
-        "closes": "23:59"
-      }
-    ],
-    "priceRange": "متوسط",
-    "description": "تأجير طاولات وكراسي تاجير كنب تاجير جلسات شعبية تاجير خيام تاجير سجاد تاجير مكيفات تاجير سماعات تاجير دفايات قهوجيين وصبابين وضيافة للرجال والنساء في الدمام والرياض وجدة.",
-    "geo": {
-      "@type": "GeoCoordinates",
-      "latitude": 26.4207,
-      "longitude": 50.0888
-    }
-  }
-  </script>
   
 <header>
   <div class="logo">حفلات ومناسبات</div>
@@ -244,7 +201,7 @@
 
 <main>
 
-<h1>تأجير طاولات وكراسي تأجير كنب تاجير مستلزمات الحفلات والمناسبات</h1>
+<h1>تأجير طاولات وكراسي تأجير كوشات تاجير كنب تاجير مستلزمات الحفلات والمناسبات</h1>
 <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
   <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
