--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
   <nav>
     <a href="#tables-chairs">تأجير طاولات وكراسي</a>
     <a href="#kanab">تأجير كنب</a>
+    <a href="#tables-chairs">تأجير كوشات</a>
     <a href="#samaat">تأجير مكبرات صوت</a>
     <a href="#khiyam">تأجير خيام</a>
     <a href="#jalsat">تأجير جلسات شعبية</a>
