--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
     <h2>تأجير طاولات وكراسي تاجير طاولات تاجير كراسي</h2>
     <div class="images-container">
 <img src="https://i.postimg.cc/v8qHTgCH/b5bd6e6a-bf35-4b58-98f2-658038b580fc.jpg" alt="" />
+<img src="https://i.postimg.cc/GtNwq9cY/IMG-3035.jpg" width="400" />
     </div>
      <!-- زر معرض الصور -->
 <div style="text-align: center; margin: 40px 0;">
@@ -464,6 +465,8 @@
     <h2>تأجير كوش افراح تاجير طاولات استقبال تاجير طاولات كوكتيل</h2>
     <div class="images-container">
 <img src="https://i.postimg.cc/d0QfxH0t/IMG-3066.jpg" alt="صورة 1">
+<img src="https://i.postimg.cc/XJfbNnk6/c0c15521-69e3-4c2c-8770-bcc5196b093b.jpg" width="400" />
+<img src="https://i.postimg.cc/SN5tPwc6/5c181b66-4bcd-4c76-87a1-96ced5f2a7bf.jpg" width="400" />  
     </div>
      
     <!-- زر معرض الصور -->
@@ -552,6 +555,11 @@
   <!--  تاجير شاشات تأجير مكبرات صوت -->
   <section id="samaat" class="service">
     <h2>تأجير شاشات تاجير ليزرات تاجير حواجز تاجير مكبرات صوت دي جي بأحدث التقنيات</h2>
+      <div class="images-container">
+    <img src="https://i.postimg.cc/zfpQx37B/e1ec96b1-ba76-40f1-b542-cd43bec45ffb.jpg" width="400" />
+    <img src="https://i.postimg.cc/dtKztMhJ/IMG-3162.jpg" width="400" />
+    <img src="https://i.postimg.cc/rs2YmWFf/IMG-3086.jpg" width="400" />
+    </div>
     
     <!-- زر معرض الصور -->
 <div style="text-align: center; margin: 40px 0;">
@@ -661,7 +669,11 @@
  <!-- تأجير خيام -->
 <section id="khiyam" class="service">
   <h2>تأجير خيام تاجير خيام اوروبية تاجير خيام فخمة للمناسبات</h2>
-
+  <div class="images-container">
+  <img src="https://i.postimg.cc/252znkBd/bd81bc5c-c85c-4745-9f2f-e541b1b015bc.jpg" width="400" />
+  <img src="https://i.postimg.cc/QMydRNx8/f6243c52-b22a-4aa0-a073-2c59cb00f8c6.jpg" width="400" />
+   </div>
+  
   <!-- زر معرض الصور -->
   <div style="text-align: center; margin: 30px 0;">
     <a href="gallery.html" 
@@ -765,6 +777,10 @@
   <section id="jalsat" class="service">
     <h2>تأجير جلسات شعبية تاجير جلسات مغربية</h2>
     <div class="images-container">
+   <img src="https://i.postimg.cc/VNbxkzWL/IMG-3033.jpg" width="400" />
+   <img src="https://i.postimg.cc/Y2fwFqKv/9ba4cf80-fdd9-4fad-9598-43ec5083b528.jpg" width="400" />
+   </div>
+   
   <!-- زر معرض الصور -->
 <div style="text-align: center; margin: 40px 0;">
   <a href="gallery.html" 
