--- a/index.html
+++ b/index.html
@@ -1099,11 +1099,22 @@
       });
     }, { passive: true });
   </script>
+
+      <!-- ✅ الفوتر -->
+  <footer style="background:#222; color:#fff; text-align:center; padding:20px; margin-top:40px; font-size:16px;">
+    <p>
+      صُمم هذا الموقع من قبل 
+      <strong>الأبيض للتسويق الرقمي</strong>
+    </p>
+    <p>
+      للتواصل عبر الواتساب:
+      <a href="https://wa.me/966559534118" target="_blank" style="color:#25D366; text-decoration:none; font-weight:bold;">
+        0559534118 📱
+      </a>
+    </p>
+  </footer>
 </body>
 </html>
-  </div>
-</section>    
-</main>
 
 <footer>
   جميع الحقوق محفوظة &copy; 2025 حفلات ومناسبات
