--- a/index.html
+++ b/index.html
@@ -4,7 +4,62 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
-
+<meta name="description" content="تأجير طاولات وكراسي تأجير كنب للمناسبات في الدمام، الخبر، الرياض، جدة. أسعار منافسة وخدمة ممتازة.">
+  
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "لمسة لتأجير مستلزمات الحفلات",
+  "image": [
+    "https://i.postimg.cc/3RMt9K5c/27.jpg",
+    "https://i.postimg.cc/6Xy0tHrm/28.jpg"
+  ],
+  "telephone": "+966559534118",
+  "url": "https://www.lamasat.store",
+  "priceRange": "ريال 50-300",
+  "areaServed": [
+    { "@type": "City", "name": "الدمام" },
+    { "@type": "City", "name": "الخبر" },
+    { "@type": "City", "name": "جدة" },
+    { "@type": "City", "name": "الرياض" },
+    { "@type": "Region", "name": "الشرقية" }
+  ],
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "خدمات التأجير",
+    "itemListElement": [
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير طاولات وكراسي", "description": "تأجير طاولات وكراسي لجميع المناسبات", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "50" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير كنب", "description": "تأجير كنب كلاسيكي وعصري للحفلات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "100" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير كراسي ملكية", "description": "كراسي ملكية عالية الجودة لمناسباتكم", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "80" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير جلسات شعبية", "description": "جلسات أرضية مريحة للشباب والعائلات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "120" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير جلسات مغربي", "description": "جلسات مغربية تقليدية للمناسبات الفخمة", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "150" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير كوش", "description": "كوش فخم لتزيين حفلات الزفاف والمناسبات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "200" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير حواجز", "description": "حواجز أمان وتنظيم للحفلات والمناسبات", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "70" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير شاشات عرض", "description": "شاشات كبيرة لمتابعة العروض والفيديوهات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "250" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير ممرات", "description": "ممرات فخمة للمناسبات وحفلات الزفاف", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "180" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير مكبرات صوت", "description": "مكبرات صوت بجودة عالية للحفلات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "300" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير سماعات", "description": "سماعات دي جي للحفلات والمناسبات", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "250" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير ليزرات", "description": "ليزرات لإضفاء لمسة فنية للحفلات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "220" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير كوش أفراح", "description": "كوش أفراح أنيق لتزيين القاعات", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "250" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير طاولات استقبال", "description": "طاولات استقبال للضيوف بأناقة", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "90" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير طاولات كوكتيل", "description": "طاولات كوكتيل للمناسبات الاجتماعية", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "80" },
+      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "قهوجيين وصبابين", "description": "خدمة قهوجيين وصبابين للحفلات والمناسبات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "120" }
+    ]
+  },
+  "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "40" },
+  "faq": {
+    "@type": "FAQPage",
+    "mainEntity": [
+      { "@type": "Question", "name": "أين يمكنني استئجار الطاولات والكراسي في الدمام؟", "acceptedAnswer": { "@type": "Answer", "text": "يمكنك استئجار الطاولات والكراسي مباشرة من فرع الدمام أو عبر التواصل معنا." } },
+      { "@type": "Question", "name": "ما هو سعر تأجير الكنب في جدة؟", "acceptedAnswer": { "@type": "Answer", "text": "سعر تأجير الكنب في جدة يبدأ من 100 ريال حسب النوع والحجم." } },
+      { "@type": "Question", "name": "هل تتوفر جلسات شعبية ومغربية في الرياض؟", "acceptedAnswer": { "@type": "Answer", "text": "نعم، تتوفر جلسات شعبية ومغربية لجميع المناسبات في الرياض." } },
+      { "@type": "Question", "name": "كيف يمكن التواصل للحجز؟", "acceptedAnswer": { "@type": "Answer", "text": "يمكنك التواصل عبر رقم الواتساب +966559534118 أو الاتصال المباشر." } }
+    ]
+  }
+}
+</script>
+  
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518401958"></script> 
   <script> 
     window.dataLayer = window.dataLayer || []; 
@@ -169,15 +224,7 @@
       }
     }
   </style>
- <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "حفلات ومناسبات",
-  "url": "https://lamasat.store",
-  "logo": "https://lamasat.store/logo.png"
-}
-</script>
+
   <!-- Redirect from GitHub URL to custom domain -->
 <script>
   if(window.location.hostname === "almeteor.github.io") {
@@ -1100,6 +1147,81 @@
     }, { passive: true });
   </script>
 
+  <!-- ✅ كود العناصر الغنية لجميع الخدمات -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "لمسة لتأجير مستلزمات الحفلات",
+    "image": ["https://i.postimg.cc/3RMt9K5c/27.jpg","https://i.postimg.cc/6Xy0tHrm/28.jpg"],
+    "telephone": "+966559534118",
+    "url": "https://www.lamasat.store",
+    "areaServed": [
+      {"@type": "City","name":"الدمام"},
+      {"@type": "City","name":"الرياض"},
+      {"@type": "City","name":"جدة"},
+      {"@type": "City","name":"الخبر"}
+    ],
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "خدمات التأجير",
+      "itemListElement": [
+        {"@type":"Offer","itemOffered":{"@type":"Product","name":"تأجير كراسي","description":"كراسي عالية الجودة","image":"https://i.postimg.cc/3RMt9K5c/27.jpg"},"priceCurrency":"SAR","price":"50"},
+        {"@type":"Offer","itemOffered":{"@type":"Product","name":"تأجير طاولات","description":"طاولات لجميع الحفلات","image":"https://i.postimg.cc/6Xy0tHrm/28.jpg"},"priceCurrency":"SAR","price":"80"}
+      ]
+    },
+    "aggregateRating":{"@type":"AggregateRating","ratingValue":"4.9","reviewCount":"32"},
+    
+    "faq": {
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "أين يمكنني استئجار الطاولات والكراسي في الدمام؟",
+          "acceptedAnswer": {"@type": "Answer","text":"يمكنك الاستئجار مباشرة من فرع الدمام أو عبر التواصل معنا."}
+        },
+        {
+          "@type": "Question",
+          "name": "ما هو سعر تأجير الكنب في الدمام",
+          "acceptedAnswer": {"@type": "Answer","text":"سعر تأجير الكنب في جدة يبدأ من 100 ريال حسب النوع والحجم."}
+      {
+        "@type": "Question",
+        "name": "ما هي أسعار تأجير الكنب؟",
+        "acceptedAnswer": { "@type": "Answer", "text": "أسعار تأجير الكنب تبدأ من 100 ريال حسب النوع والحجم." }
+      },
+      {
+        "@type": "Question",
+        "name": "هل تتوفر جلسات شعبية ومغربية؟",
+        "acceptedAnswer": { "@type": "Answer", "text": "نعم، تتوفر جلسات شعبية ومغربية لجميع المناسبات حسب عدد الضيوف." }
+      },
+      {
+        "@type": "Question",
+        "name": "هل تقدمون شاشات ومكبرات صوت؟",
+        "acceptedAnswer": { "@type": "Answer", "text": "نعم، نقدم شاشات، مكبرات صوت وسماعات لجميع المناسبات." }
+      },
+      {
+        "@type": "Question",
+        "name": "هل لديكم خدمة التوصيل والتركيب؟",
+        "acceptedAnswer": { "@type": "Answer", "text": "نعم، نقدم خدمة التوصيل والتركيب لجميع المدن خلال 2-4 ساعات حسب الموقع." }
+      },
+      {
+        "@type": "Question",
+        "name": "هل يمكن استئجار المعدات ليوم واحد فقط؟",
+        "acceptedAnswer": { "@type": "Answer", "text": "نعم، يمكن استئجار أي خدمة ليوم واحد أو أكثر حسب رغبتك." }
+      },
+      {
+        "@type": "Question",
+        "name": "كيف يمكن التواصل للحجز؟",
+        "acceptedAnswer": { "@type": "Answer", "text": "يمكنك التواصل عبر رقم الواتساب +966559534118 أو الاتصال المباشر." }
+        }
+      ]
+    }
+  }
+  </script>
+
+</body>
+</html>
+      
       <!-- ✅ الفوتر -->
   <footer style="background:#222; color:#fff; text-align:center; padding:20px; margin-top:40px; font-size:16px;">
     <p>
@@ -1112,7 +1234,7 @@
         0559534118 📱
       </a>
     </p>
-  </footer>
+ </footer>
 </body>
 </html>
 
