--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>من نحن - لمسات للحفلات</title>
-  <meta name="description" content="من نحن - لمسات للحفلات خبرة منذ 2014 في تأجير مستلزمات الحفلات: كنب، كراسي، طاولات، خيام، جلسات شعبية، قهوجيين وصبابين. نخدم الشرقية والرياض." />
+  <meta name="description" content="من نحن - لمسة للحفلات خبرة منذ 2014 في تأجير مستلزمات الحفلات: كنب، كراسي، طاولات، خيام، جلسات شعبية، قهوجيين وصبابين. نخدم الشرقية والرياض." />
   <link rel="icon" href="https://almeteor.github.io/favicon.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -71,7 +71,7 @@
   <div class="container">
     <h1>من نحن</h1>
     <p>
-      لمسات للحفلات شركة متخصصة في <strong>تأجير مستلزمات الحفلات والمناسبات</strong> منذ عام <strong>2014</strong>.
+      لمسة للحفلات شركة متخصصة في <strong>تأجير مستلزمات الحفلات والمناسبات</strong> منذ عام <strong>2014</strong>.
       نقدم خدماتنا في منطقة <strong>الرياض والشرقية</strong> بأعلى مستوى من الجودة والاحترافية.
     </p>
 
