--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>من نحن - لمسات للحفلات</title>
+  <title>من نحن - لمسة للحفلات</title>
   <meta name="description" content="من نحن - لمسة للحفلات خبرة منذ 2014 في تأجير مستلزمات الحفلات: كنب، كراسي، طاولات، خيام، جلسات شعبية، قهوجيين وصبابين. نخدم الشرقية والرياض." />
   <link rel="icon" href="https://almeteor.github.io/favicon.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
