--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
-<meta name="description" content="تأجير طاولات وكراسي تأجير كنب للمناسبات في الدمام، الخبر، الرياض، جدة. أسعار منافسة وخدمة ممتازة.">
+<meta name="description" content="تأجير طاولات وكراسي تأجير كنب تأجير لوازم حفلات ومناسبات في الدمام، الخبر، الرياض، جدة. أسعار منافسة وخدمة ممتازة.">
   
   <script type="application/ld+json">
 {
