--- a/index.html
+++ b/index.html
@@ -6,47 +6,49 @@
   <title>تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
 <meta name="description" content="تأجير طاولات وكراسي تأجير كنب تأجير لوازم حفلات ومناسبات في الدمام، الخبر، الرياض، جدة. أسعار منافسة وخدمة ممتازة.">
   
-  <script type="application/ld+json">
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "LocalBusiness",
-  "name": "لمسة لتأجير مستلزمات الحفلات",
-  "image": [
-    "https://i.postimg.cc/3RMt9K5c/27.jpg",
-    "https://i.postimg.cc/6Xy0tHrm/28.jpg"
-  ],
-  "telephone": "+966559534118",
+  "@type": "Organization",
+  "name": "لمسة للحفلات والمناسبات",
   "url": "https://www.lamasat.store",
-  "priceRange": "ريال 50-300",
-  "areaServed": [
-    { "@type": "City", "name": "الدمام" },
-    { "@type": "City", "name": "الخبر" },
-    { "@type": "City", "name": "جدة" },
-    { "@type": "City", "name": "الرياض" },
-    { "@type": "Region", "name": "الشرقية" }
+  "logo": "https://www.lamasat.store/logo.png",
+  "sameAs": [
+    "https://www.instagram.com/lamasatksa7"
   ],
-  "hasOfferCatalog": {
-    "@type": "OfferCatalog",
-    "name": "خدمات التأجير",
-    "itemListElement": [
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير طاولات وكراسي", "description": "تأجير طاولات وكراسي لجميع المناسبات", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "50" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير كنب", "description": "تأجير كنب كلاسيكي وعصري للحفلات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "100" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير كراسي ملكية", "description": "كراسي ملكية عالية الجودة لمناسباتكم", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "80" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير جلسات شعبية", "description": "جلسات أرضية مريحة للشباب والعائلات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "120" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير جلسات مغربي", "description": "جلسات مغربية تقليدية للمناسبات الفخمة", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "150" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير كوش", "description": "كوش فخم لتزيين حفلات الزفاف والمناسبات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "200" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير حواجز", "description": "حواجز أمان وتنظيم للحفلات والمناسبات", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "70" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير شاشات عرض", "description": "شاشات كبيرة لمتابعة العروض والفيديوهات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "250" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير ممرات", "description": "ممرات فخمة للمناسبات وحفلات الزفاف", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "180" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير مكبرات صوت", "description": "مكبرات صوت بجودة عالية للحفلات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "300" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير سماعات", "description": "سماعات دي جي للحفلات والمناسبات", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "250" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير ليزرات", "description": "ليزرات لإضفاء لمسة فنية للحفلات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "220" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير كوش أفراح", "description": "كوش أفراح أنيق لتزيين القاعات", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "250" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير طاولات استقبال", "description": "طاولات استقبال للضيوف بأناقة", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "90" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "تأجير طاولات كوكتيل", "description": "طاولات كوكتيل للمناسبات الاجتماعية", "image": "https://i.postimg.cc/3RMt9K5c/27.jpg" }, "priceCurrency": "SAR", "price": "80" },
-      { "@type": "Offer", "itemOffered": { "@type": "Product", "name": "قهوجيين وصبابين", "description": "خدمة قهوجيين وصبابين للحفلات والمناسبات", "image": "https://i.postimg.cc/6Xy0tHrm/28.jpg" }, "priceCurrency": "SAR", "price": "120" }
-    ]
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+966559534118",
+    "contactType": "customer service",
+    "areaServed": "SA"
   },
+  "makesOffer": [
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير كنب","description":"تأجير كنب فخم وراقي لجميع المناسبات والأفراح، صالات ومنازل، كلمات مفتاحية: كنب، تأجير كنب، كنب أفراح، كنب فخم، أثاث حفلات.","url":"https://www.lamasat.store/kanab.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير طاولات وكراسي","description":"تأجير طاولات وكراسي بجودة عالية لجميع المناسبات، تشمل طاولات استقبال وطاولات كوكتيل، كلمات مفتاحية: طاولات، كراسي، تأجير طاولات، تأجير كراسي، طاولات أفراح، أثاث حفلات.","url":"https://www.lamasat.store/tables-chairs.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير خيام","description":"تأجير خيام بمقاسات مختلفة للمناسبات الخارجية والداخلية، مثالية للزواجات والحفلات الكبيرة، كلمات مفتاحية: خيام، تأجير خيام، خيام أفراح، خيام حفلات، مظلات حفلات.","url":"https://www.lamasat.store/tents.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير مكيفات","description":"تأجير مكيفات كبيرة وصغيرة للمناسبات والأماكن المفتوحة مع تركيب سريع وفعال، كلمات مفتاحية: مكيفات، تأجير مكيفات، تكييف حفلات، تبريد صالات.","url":"https://www.lamasat.store/ac.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير دفايات","description":"تأجير دفايات كهربائية أو غازية للمناسبات والأماكن الباردة، كلمات مفتاحية: دفايات، تأجير دفايات، تدفئة حفلات، تدفئة مناسبات.","url":"https://www.lamasat.store/heaters.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير سماعات","description":"تأجير سماعات دي جي ومكبرات صوت عالية الجودة لجميع الحفلات والمناسبات، كلمات مفتاحية: سماعات، مكبرات صوت، دي جي، صوت حفلات، تأجير سماعات.","url":"https://www.lamasat.store/speakers.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير كراسي وطاولات","description":"تأجير كراسي وطاولات لجميع المناسبات والأفراح، كلمات مفتاحية: كراسي، طاولات، تأجير كراسي، تأجير طاولات، أثاث حفلات.","url":"https://www.lamasat.store/chairs-tables.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير طاولات","description":"تأجير طاولات استقبال وطاولات كوكتيل لجميع المناسبات، كلمات مفتاحية: طاولات، تأجير طاولات، طاولات حفلات، تجهيز حفلات.","url":"https://www.lamasat.store/tables.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير كراسي","description":"تأجير كراسي للمناسبات والأفراح مع جودة عالية، كلمات مفتاحية: كراسي، تأجير كراسي، كراسي حفلات، تجهيز حفلات.","url":"https://www.lamasat.store/chairs.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير جلسات","description":"تأجير جلسات مريحة وجميلة لجميع المناسبات، كلمات مفتاحية: جلسات، تأجير جلسات، جلسات حفلات، تجهيز حفلات.","url":"https://www.lamasat.store/sessions.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير مكبرات صوت","description":"تأجير مكبرات صوت للحفلات والمناسبات الكبيرة، كلمات مفتاحية: مكبرات صوت، تأجير مكبرات، دي جي، صوت حفلات.","url":"https://www.lamasat.store/speakers-system.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير جلسات شعبية","description":"جلسات شعبية مغربية وعربية للمناسبات، كلمات مفتاحية: جلسات شعبية، تأجير جلسات، جلسات مغربية، حفلات شعبية، ديكور مناسب.","url":"https://www.lamasat.store/traditional-sessions.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"الجبير جلسات مغربية","description":"جلسات مغربية تقليدية للفعاليات والمناسبات، تصميم جذاب ومريح، كلمات مفتاحية: جلسات مغربية، جلسات تقليدية، تأجير جلسات، مناسبات، حفلات.","url":"https://www.lamasat.store/moroccan-sessions.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير كوش أفراح","description":"كوش أفراح بتصاميم مميزة تناسب جميع المناسبات مع خدمات تركيب احترافية، كلمات مفتاحية: كوش أفراح، تأجير كوش، تصميم كوش، كوش احتفالات، زينة حفلات.","url":"https://www.lamasat.store/wedding-stage.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير طاولات استقبال","description":"طاولات استقبال للضيوف في جميع أنواع الحفلات والمناسبات، كلمات مفتاحية: طاولات استقبال، تأجير طاولات، استقبال ضيوف، تجهيز حفلات.","url":"https://www.lamasat.store/reception-tables.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير طاولات كوكتيل","description":"طاولات كوكتيل عالية الجودة للحفلات والمناسبات الخاصة، كلمات مفتاحية: طاولات كوكتيل، تأجير طاولات كوكتيل، طاولات حفلات، أثاث حفلات.","url":"https://www.lamasat.store/cocktail-tables.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير ليزرات","description":"أجهزة ليزر لإضاءة الحفلات والمناسبات بشكل احترافي، كلمات مفتاحية: ليزرات، تأجير ليزرات، إضاءة حفلات، إضاءة مناسبات، تأثيرات ضوئية.","url":"https://www.lamasat.store/lasers.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير شاشات","description":"شاشات عرض لجميع أنواع الفعاليات والمناسبات، كلمات مفتاحية: شاشات، تأجير شاشات، عرض فيديو، مناسبات، شاشات حفلات.","url":"https://www.lamasat.store/screens.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير حواجز","description":"حواجز تنظيمية للحفلات والمناسبات لتسهيل إدارة المكان، كلمات مفتاحية: حواجز، تأجير حواجز، تنظيم مناسبات، تنظيم حفلات، تجهيز حفلات.","url":"https://www.lamasat.store/barriers.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير ممرات","description":"ممرات للزينة والمناسبات الخاصة مع تصاميم جذابة، كلمات مفتاحية: ممرات، تأجير ممرات، زينة حفلات، ديكور ممرات، تجهيز حفلات.","url":"https://www.lamasat.store/walkways.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير زل","description":"تأجير زل للمناسبات والحفلات مع تركيب سريع، كلمات مفتاحية: زل، تأجير زل، تجهيز حفلات، مناسبات، تنظيم حفلات.","url":"https://www.lamasat.store/zel.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"تأجير سجاد","description":"سجاد للممرات والفعاليات مع تصاميم مختلفة، كلمات مفتاحية: سجاد، تأجير سجاد، ديكور حفلات، مناسبات، تجهيز حفلات.","url":"https://www.lamasat.store/carpets.html","serviceType":"Rental"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"قهوجيين وصبابين","description":"خدمة قهوجيين وصبابين قهوة للمناسبات والأفراح، كلمات مفتاحية: قهوجيين، صبابين، خدمة قهوة، مناسبات، حفلات.","url":"https://www.lamasat.store/qahwa.html","serviceType":"Service"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"قهوجيين","description":"تأجير قهوجيين محترفين لتقديم القهوة في جميع المناسبات، كلمات مفتاحية: قهوجيين، تقديم قهوة، مناسبات، حفلات، خدمة قهوة.","url":"https://www.lamasat.store/qahwi.html","serviceType":"Service"}},
+    {"@type":"Offer","itemOffered":{"@type":"Service","name":"صبابين قهوة","description":"تأجير صبابين قهوة لتقديم المشروبات الساخنة للمناسبات، كلمات مفتاحية: صبابين قهوة، تقديم قهوة، مناسبات، حفلات، خدمة قهوة.","url":"https://www.lamasat.store/coffee-boys.html","serviceType":"Service"}}
+  ],
   "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "40" },
   "faq": {
     "@type": "FAQPage",
@@ -57,7 +59,6 @@
       { "@type": "Question", "name": "كيف يمكن التواصل للحجز؟", "acceptedAnswer": { "@type": "Answer", "text": "يمكنك التواصل عبر رقم الواتساب +966559534118 أو الاتصال المباشر." } }
     ]
   }
-}
 </script>
   
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518401958"></script> 
